Added functionality: Clicking 'Add' moves the atomic habit group box to the cart for checkout. when Checkout form show you can return to the home form by clicking the left arrow. Also included functionality to navigate books from 'All Genre' to 'Fantasy' using buttons.

--- a/CheckoutForm.resx
+++ b/CheckoutForm.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pbBackHome.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAMNJREFUWEft1tEJwjAQxvGM4giOEDWCYzhC1Qi+6Sa6iWAb++gojlB7eGKpeTFe
+        DgAACw4BQL7hQQAAAMNJREFUWEft1tEJwjAQxvGM4giOEDWCYzhC1Qi+6Sa6iWAb++gojlB7eGKpeTFe
         yQnfD+6hDbT/l9IzAABvtigtDV/q4ny9n21CQzNdVwXf1qEb9wwMRz7Krx/Xzn2xq0d8nFcsbr4NYz7O
         C3GpEJcKcan+LY7mRn8Kubks+XXfcb60kbhBJmnBUB9InA+Hzwdez5NVdZIa53/cfCKRej6SF0RKQaQU
         REpBpJR+JC0BfKRHN7INTNtQhkYLBg1fAgAYYx4UWBoPafO7OwAAAABJRU5ErkJggg==
